Fix clickables that jumps on click

--- a/components/graph/graph.less
+++ b/components/graph/graph.less
@@ -23,22 +23,21 @@
 
     .rightSideContainer {
       position: absolute;
+      display: flex;
       margin-left: (@log-width-small + 40px);
       top: -22px;
       white-space: nowrap;
       height: 40px;
     }
     .droparea {
-      margin-top: 11px;
+      margin: 8px 0px 4px 0px;
     }
 
     .ref {
       display: inline-block;
       opacity: 0.6;
       cursor: move;
-      margin-left: 0px;
-      margin-right: 0px;
-      margin-top: 8px;
+      margin: 7px 0px 4px 0px;
       outline: none;
       padding: 2px 5px 2px 5px;
       border: 3px solid transparent;
@@ -50,7 +49,6 @@
         border-color: transparent;
       }
       &.focused {
-        margin-top: 6px;
         border-color: #fff;
       }
 
@@ -58,6 +56,8 @@
         font-weight: bold;
         opacity: 1;
         font-size: 16pt;
+        margin-top: 1.5px;
+        margin-bottom: -2px;
         .octicon {
           font-size: 16pt;
         }
@@ -75,6 +75,8 @@
       opacity: 1;
       transition: opacity 0.2s;
       -webkit-transition: opacity 0.2s;
+      margin-right: 5px;
+      margin-left: 5px;
       &.dimmed {
         opacity: 0.5;
       }
